# modrinthUpdater

./: README.md  README.rst  main.py  setup.cfg
src/modrinthUpdater/: __init__.py  main.py
src/modrinthUpdator/: main.py
