[metadata]
name = modrinthUpdater
version = 0.0.6
author = rtfcv
author_email = author@example.com
description = wrapper for neovim remote function
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rtfcv/modrinthUpdater
project_urls =
    Bug Tracker = https://github.com/rtfcv/modrinthUpdater/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    modrinthUpdater=modrinthUpdater:parse
